# ChangeLog for dev-python/pyaudio
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyaudio/ChangeLog,v 1.2 2010/06/02 06:52:10 tove Exp $

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove hncaldwell from metadata.xml (#230778)

*pyaudio-0.2.3 (21 Jan 2009)

  21 Jan 2009; Heath Caldwell <hncaldwell@gentoo.org> +metadata.xml,
  +pyaudio-0.2.3.ebuild:
  New ebuild for pyaudio. Ebuild written by me.
