@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyaudio
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyaudio/ChangeLog,v 1.2 2010/06/02 06:52:10 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyaudio/ChangeLog,v 1.3 2010/06/02 11:16:03 djc Exp $
+
+  02 Jun 2010; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
+  python team takes over maintainership.
 
   02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
   Remove hncaldwell from metadata.xml (#230778)
